@@ -1,3 +1,9 @@
+Thu Jul 11 13:33:41 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmlanguages.c, config/locale.alias:  Added Macedonian
+	  fixes #84290, added Malay to the language alias list,
+	  added some more untranslated names, added Vietnamese
+
 Thu Jul 11 13:31:01 2002  George Lebl <jirka@5z.com>
 
 	* gui/greeter/greeter_action_language.c:  Fix saving of languages,
